sophons/apps/goldpinger/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia
  namespace: goldpinger
spec:
  chain:
    middlewares:
      - name: forwardauth-authelia
        namespace: authelia
