sophons/apps/goldpinger/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/nlamirault/schema-hub/main/schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldpinger
  namespace: goldpinger
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Simple cluster connectivity monitoring"
    gethomepage.dev/name: Goldpinger
    gethomepage.dev/group: Alerting & Notifications
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: websecure

  hostnames:
    - goldpinger.sophons.cloud

  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: forwardauth-authelia
      backendRefs:
        - name: goldpinger
          port: 8081
